--- a/project_6.html
+++ b/project_6.html
@@ -58,8 +58,9 @@
               <div class="price">
                 Price: $10.00
                 <div class="addToCart">
-                  <span data-product-price="10" 
-                        data-product-name="Product-1">
+                  <span data-product-name="Product-1"
+                        data-product-price="10"                         
+                        data-product-type="1">
                       Add to Cart
                   </span>
                 </div>
@@ -84,8 +85,9 @@
               <div class="price">
                 Price: $8.00
                 <div class="addToCart">
-                  <span data-product-price="8"
-                        data-product-name="Product-2">
+                  <span data-product-name="Product-2"
+                        data-product-price="8"                        
+                        data-product-type="1">
                     Add to Cart
                   </span>
                 </div>
@@ -110,8 +112,9 @@
               <div class="price">
                 Price: $135.00
                 <div class="addToCart">
-                  <span data-product-price="135" 
-                        data-product-name="Product-3">
+                  <span data-product-name="Product-3"
+                        data-product-price="135"                         
+                        data-product-type="1">
                     Add to Cart
                   </span>
                 </div>
@@ -136,8 +139,8 @@
               <div class="price">
                 Price: $1.00
                 <div class="addToCart">
-                  <span data-product-price="1" 
-                        data-product-name="Product-4">
+                  <span data-product-name="Product-4"
+                        data-product-price="1">
                     Add to Cart
                   </span>
                 </div>
@@ -162,8 +165,8 @@
               <div class="price">
                 Price: $10.00
                 <div class="addToCart">
-                  <span data-product-price="10" 
-                        data-product-name="Product-5">
+                  <span data-product-name="Product-5"
+                        data-product-price="10">
                     Add to Cart
                   </span>
                 </div>
@@ -188,8 +191,8 @@
               <div class="price">
                 Price: $20.00
                 <div class="addToCart">
-                  <span data-product-price="20" 
-                        data-product-name="Product-6">
+                  <span data-product-name="Product-6"
+                        data-product-price="20">
                     Add to Cart
                   </span>
                 </div>
@@ -214,8 +217,8 @@
               <div class="price">
                 Price: $310.00
                 <div class="addToCart">
-                  <span data-product-price="310"
-                        data-product-name="Product-7">
+                  <span data-product-name="Product-7"
+                        data-product-price="310">
                     Add to Cart
                   </span>
                 </div>
@@ -240,8 +243,8 @@
               <div class="price">
                 Price: $130.00
                 <div class="addToCart">
-                  <span data-product-price="130"
-                        data-product-name="Product-8">
+                  <span data-product-name="Product-8"
+                        data-product-price="130">
                     Add to Cart
                   </span>
                 </div>
@@ -266,8 +269,8 @@
               <div class="price">
                 Price: $5.00
                 <div class="addToCart">
-                  <span data-product-price="5"
-                        data-product-name="Product-9">
+                  <span data-product-name="Product-9"
+                        data-product-price="5">
                     Add to Cart
                   </span>
                 </div>
@@ -300,6 +303,7 @@
               </div>
               <div class="title">
                 Product 10
+                <span class="product-discount">10% off</span>
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -318,8 +322,8 @@
               <div class="price">
                 Price: $45.00
                 <div class="addToCart">
-                  <span data-product-price="45"
-                        data-product-name="Product-11">
+                  <span data-product-name="Product-11"
+                        data-product-price="45">
                     Add to Cart
                   </span>
                 </div>
@@ -344,8 +348,8 @@
               <div class="price">
                 Price: $10.00
                 <div class="addToCart">
-                  <span data-product-price="10"
-                        data-product-name="Product-12">
+                  <span data-product-name="Product-12"
+                        data-product-price="10">
                     Add to Cart
                   </span>
                 </div>
@@ -445,7 +449,9 @@
   var CartDB = {
     currency: '\u0024',
     promoCodes : {
-
+      code: { 'bigsale': 5},
+      codeTypes: {'1': 15, '2': 8},
+      products: { 'product-10': 10}
     },
     products: {},
     addProd: function(product) {
@@ -491,6 +497,23 @@
         }
 
         return total;
+    },
+    getProductsList: function() {
+      return this.products;
+    },
+    getPromoCode: function(code) {
+      return this.promoCodes[code] || void 0;
+    },
+    getDiscount: function(product) {
+
+      var name = product.name;
+      var type = product.type;
+
+      if (!name) return void 0;
+
+      name = name.toLowerCase();
+
+      return this.promoCodes.products[name] || void 0;
     }
   };
 
@@ -504,6 +527,7 @@
 
         var name      = product.getAttribute("data-product-name");
         var price     = product.getAttribute("data-product-price");
+        var type      = product.getAttribute("data-product-type");
         var quantity  = product.quantity || 1;
         var newProd;
 
@@ -512,6 +536,7 @@
         newProd = CartDB.addProd({
             name:       name,
             unitPrice:  price,
+            type:       type,
             quantity:   quantity
         });
 
@@ -605,8 +630,20 @@
 
     function addCartRow(product) {
 
-        var partial   = getCurrency(product.unitPrice * product.quantity),
-            unitPrice = getCurrency(product.unitPrice);
+        var discount  = CartDB.getDiscount(product),
+            unitPrice = getCurrency(product.unitPrice),
+            unitPriceDiscount,
+            partial;
+
+        if (!discount) {
+            partial = getCurrency(product.unitPrice * product.quantity);
+        } else {
+          partial = product.unitPrice * product.quantity;
+          partial = partial - ((partial * discount) / 100);
+          partial = getCurrency(partial);
+
+          unitPriceDiscount = getCurrency(product.unitPrice - ((product.unitPrice * discount) / 100));
+        }
 
         var tr   = createElem({ tag: 'TR' }),
             tr2  = createElem({ tag: 'TR' });
@@ -614,15 +651,14 @@
         var td    = createElem({ tag: 'TD', class: 'table__td text-center' }),
             td2   = createElem({ tag: 'TD', class: 'table__td text-left' }),
             td4   = createElem({ tag: 'TD', class: 'table__td text-left' }),
-            td3   = createElem({ tag: 'TD', class: 'table__td text-left', 
-                                 text: 'Unit price: ' + unitPrice }),
+            td3   = createElem({ tag: 'TD', class: 'table__td text-left',
+                                 text: 'Unit price: ' }),
             td5   = createElem({ tag: 'TD', class: 'table__td text-left' }),
             td6   = createElem({ tag: 'TD', class: 'table__td text-right' }),
-            tdSeparator  = createElem({ 
-                                        tag: 'TD', 
-                                        class: 'table__td--separator',
-                                        colspan: '6'
-                                      });
+            tdDisc  = createElem({ tag: 'TD', class: 'table__td text-left' }),
+            tdSepa  = createElem({ tag: 'TD', class: 'table__td--separator',
+                                   colspan: '7'
+                                });
 
         var a = createElem({ 
           tag: 'A',
@@ -653,15 +689,29 @@
         });
 
         var spn = createElem({
-          tag: 'SPAN', 
-          class: 'input-group-btn'
-        }),
+              tag: 'SPAN', 
+              class: 'input-group-btn'
+          }),
+          spnPrice = createElem({
+              tag: 'SPAN',
+              class: (discount) ? 'cart-product-price-discount' : '',
+              text: unitPrice
+          }),
+          spnPriceDiscount = createElem({
+              tag: 'SPAN',
+              text: ' ' + unitPriceDiscount
+          }),
+          spnDiscount = createElem({
+              tag: 'SPAN', 
+              class: 'cart-product-discount',
+              text: discount + '% off'
+          }),
           spnPartial = createElem({
-          tag: 'SPAN', 
-          id: 'partial-'+ Utilities.replaceAll(product.name, ' ', '-'),
-          name: 'partial-'+ Utilities.replaceAll(product.name, ' ', '-'),
-          text:  partial
-        });
+              tag: 'SPAN', 
+              id: 'partial-'+ Utilities.replaceAll(product.name, ' ', '-'),
+              name: 'partial-'+ Utilities.replaceAll(product.name, ' ', '-'),
+              text:  partial
+          });
 
         var removeButton = createElem({ 
             tag: 'input', 
@@ -671,22 +721,30 @@
             value: 'Remove'
         });
 
+
         a.appendChild(img)
         td.appendChild(a);
         td2.appendChild(aProd);
+        td3.appendChild(spnPrice);
         td4.appendChild(inputTxt);
         spn.appendChild(removeButton);
         td5.appendChild(spn);
         td6.appendChild(spnPartial);
 
+        if (discount) {
+          td3.appendChild(spnPriceDiscount);
+          tdDisc.appendChild(spnDiscount);
+        }
+
         tr2.appendChild(td); 
         tr2.appendChild(td2); 
         tr2.appendChild(td3); 
+        tr2.appendChild(tdDisc);
         tr2.appendChild(td4); 
         tr2.appendChild(td5); 
-        tr2.appendChild(td6); 
+        tr2.appendChild(td6);  
 
-        tr.appendChild(tdSeparator);
+        tr.appendChild(tdSepa);
 
         cartTable.appendChild(tr);
         cartTable.appendChild(tr2);
