Add product's type

--- a/project_6.html
+++ b/project_6.html
@@ -67,6 +67,9 @@
               </div>
               <div class="title">
                 Product 1
+                <span class="product-promo">
+                  special type 1
+                </span>
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -94,6 +97,9 @@
               </div>
               <div class="title">
                 Product 2
+                <span class="product-promo">
+                  special type 1
+                </span>
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -121,6 +127,9 @@
               </div>
               <div class="title">
                 Product 3
+                <span class="product-promo">
+                  special type 1
+                </span>
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -303,7 +312,10 @@
               </div>
               <div class="title">
                 Product 10
-                <span class="product-discount">10% off</span>
+                <span class="product-promo 
+                             product-promo--discount">
+                  10% off
+                </span>
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
