--- a/project_6.html
+++ b/project_6.html
@@ -448,190 +448,191 @@
 <script src="js/validator.js"></script>
 <script src="js/utilities.js"></script>
 <script>
+
+var Cart = (function(window) {
+
   var _win = window,
       _doc = _win.document;
 
-  var addButtons = _doc.getElementsByClassName('addToCart'),
-      cart       = _doc.getElementById('cart'),
-      cartTable  = _doc.getElementById('cart-table').childNodes[1],
-      cartSubTot = _doc.getElementById('cartSubTot'),
-      cartTotal  = _doc.getElementById('cartTotal'),
-      cartShipp  = _doc.getElementById('cartShipping'),
-      cartCoupon = _doc.getElementById('cartCoupon'),
+  // Initilize only one Cart per time
+  var _once = false;
+
+  var addButtons    = _doc.getElementsByClassName('addToCart'),
+      cart          = _doc.getElementById('cart'),
+      cartTable     = _doc.getElementById('cart-table').childNodes[1],
+      cartSubTot    = _doc.getElementById('cartSubTot'),
+      cartTotal     = _doc.getElementById('cartTotal'),
+      cartShipp     = _doc.getElementById('cartShipping'),
+      cartCoupon    = _doc.getElementById('cartCoupon'),
       cartCouponVal = _doc.getElementById('cartCouponVal'),
       cartCouponRow = _doc.getElementById('cartCouponRow'),
       couponMessage = _doc.getElementById('couponMessage'),
-      couponButton = _doc.getElementById('couponButton'),
+      couponButton  = _doc.getElementById('couponButton'),
       couponInput   = _doc.getElementById('couponInput'),
-      len        = addButtons.length;
+      len           = addButtons.length;
 
-  var CartDB = {
-    currency: '\u0024',
-    shippingCost: 7,
-    check: {
-        subTotal: 0,
-        saving: 0
-    },
-    promoCodes: {
-      applied: null,
-      coupons: { 'bigsale': 50, 'promopromo': 16, 'white': 5 },
-      types: { '1': 15, '2': 8, '3': 7 },
-      products: { 'product-10': 10}
-    },
-    products: {},
-    updateCheck: function() {
+    var CartDB = {
+        currency: '\u0024',
+        shippingCost: 7,
+        check: {
+            subTotal: 0,
+            saving: 0
+        },
+        promoCodes: {
+          applied: null,
+          coupons: { 'bigsale': 50, 'promopromo': 16, 'white': 5 },
+          types: { '1': 15, '2': 8, '3': 7 },
+          products: { 'product-10': 10}
+        },
+        products: {},
+        updateCheck: function() {
 
-        var that = this;
+            var that = this;
 
-        var subTotal  = 0,
-            saving    = 0,
-            discount;
+            var subTotal  = 0,
+                saving    = 0,
+                discount;
 
-        var list = this.getProducts();
+            var list = this.getProducts();
 
-        list.map(function(product) {
-            discount  = that.getDiscount(product);
-            subTotal += (product.unitPrice * product.quantity);
-            saving   += subTotal - calcPercentage(subTotal, discount);
-        })
+            list.map(function(product) {
+                discount  = that.getDiscount(product);
+                subTotal += (product.unitPrice * product.quantity);
+                saving   += subTotal - calcPercentage(subTotal, discount);
+            })
 
-        this.check.subTotal = subTotal.toFixed(2);
-        this.check.saving   = saving.toFixed(2);
-    },
-    addProd: function(product) {
+            this.check.subTotal = subTotal.toFixed(2);
+            this.check.saving   = saving.toFixed(2);
+        },
+        addProd: function(product) {
 
-        if (!this.products[product.name]) {
-            this.products[product.name] = copy(product, {});            
-        } else if (this.products[product.name]) {
-          this.products[product.name]['quantity'] += 1;
-        }
-
-        this.updateCheck();
-
-        return this.products[product.name];
-    },
-    updateProd: function(product) {
-
-        if (!product && !product.name && !product.quantity && 
-            !this.products[product.name]) {
-            return false;
-        }
-
-        this.products[product.name]['quantity'] = parseInt(product.quantity);
-
-        this.updateCheck();
-
-        return this.products[product.name];
-    },
-    remProd: function(product) {
-        if (product && product.name && this.products[product.name]) {
-            delete this.products[product.name];
-            this.updateCheck();
-            return true;
-        }
-
-        return false;
-    },
-    getQuantity: function(productName) {
-
-        var total = 0;
-
-        if (productName && this.products[productName]['quantity']) {
-            return this.products[productName]['quantity'];
-        }
-
-        for (var p in this.products) {
-          if (this.products.hasOwnProperty(p) && this.products[p]['quantity']) {
-              total += this.products[p]['quantity'];
-          }
-        }
-
-        return total;
-    },
-    getProductsList: function() {
-      return Utilities.keys(this.products);
-    },
-    getProduct: function(name) {
-      return this.products[name] || void 0;
-    },
-    getProducts: function() {
-        var list = [];
-
-        for(var key in this.products) {
-            if(this.products.hasOwnProperty(key)) {
-                list.push(this.products[key]);
+            if (!this.products[product.name]) {
+                this.products[product.name] = copyObj(product, {});            
+            } else if (this.products[product.name]) {
+              this.products[product.name]['quantity'] += 1;
             }
+
+            this.updateCheck();
+
+            return this.products[product.name];
+        },
+        updateProd: function(product) {
+
+            if (!product && !product.name && !product.quantity && 
+                !this.products[product.name]) {
+                return false;
+            }
+
+            this.products[product.name]['quantity'] = parseInt(product.quantity);
+
+            this.updateCheck();
+
+            return this.products[product.name];
+        },
+        remProd: function(product) {
+            if (product && product.name && this.products[product.name]) {
+                delete this.products[product.name];
+                this.updateCheck();
+                return true;
+            }
+
+            return false;
+        },
+        getQuantity: function(productName) {
+
+            var total = 0;
+
+            if (productName && this.products[productName]['quantity']) {
+                return this.products[productName]['quantity'];
+            }
+
+            for (var p in this.products) {
+              if (this.products.hasOwnProperty(p) && this.products[p]['quantity']) {
+                  total += this.products[p]['quantity'];
+              }
+            }
+
+            return total;
+        },
+        getProductsList: function() {
+          return Utilities.keys(this.products);
+        },
+        getProduct: function(name) {
+          return this.products[name] || void 0;
+        },
+        getProducts: function() {
+            var list = [];
+
+            for(var key in this.products) {
+                if(this.products.hasOwnProperty(key)) {
+                    list.push(this.products[key]);
+                }
+            }
+
+          return list;
+        },
+        getPromoTypes: function() {
+          return Utilities.keys(this.promoCodes.types);      
+        },
+        getPromoType: function(name) {
+          return this.promoCodes.types[name];      
+        },
+        getPromoCode: function(code) {
+          return this.promoCodes[code] || void 0;
+        },
+        getDiscount: function(product) {
+
+          var promos  = this.promoCodes;
+          var name    = product.name;
+          var type    = product.type;
+
+         if (!name) return 0;
+
+          name = name.toLowerCase();
+
+          return promos.products[name] || promos.types[type] || 0;
+        },
+        resetCoupon: function(callback) {
+          this.promoCodes.applied = null;
+          callback();
+        },
+        setCoupon: function(couponCode) {
+
+          var promos = this.promoCodes;
+
+          if (!promos.coupons[couponCode]) return void 0;
+
+          promos.applied = promos.coupons[couponCode];
+
+          return promos.applied;
+        },
+        getCouponValue: function() {
+
+            var subTotal      = this.getSubTotal(),
+                couponAmount  = this.promoCodes.applied,
+                couponValue   = 0;
+
+            // When there is not a valid coupon applied, return 0
+            if (!couponAmount) return couponValue;
+
+            couponValue = subTotal - calcPercentage(subTotal, couponAmount);
+
+            return couponValue;
+        },
+        isCoupon: function() {
+          return !!this.promoCodes.applied;
+        },
+        getShippingCost: function() {
+          return this.shippingCost;
+        },
+        getSubTotal: function() {
+          return this.check.subTotal;
+        },
+        getTotalSaving: function() {
+          return this.check.saving;
         }
+    };
 
-      return list;
-    },
-    getPromoTypes: function() {
-      return Utilities.keys(this.promoCodes.types);      
-    },
-    getPromoType: function(name) {
-      return this.promoCodes.types[name];      
-    },
-    getPromoCode: function(code) {
-      return this.promoCodes[code] || void 0;
-    },
-    getDiscount: function(product) {
-
-      var promos  = this.promoCodes;
-      var name    = product.name;
-      var type    = product.type;
-
-     if (!name) return 0;
-
-      name = name.toLowerCase();
-
-      return promos.products[name] || promos.types[type] || 0;
-    },
-    resetCoupon: function(callback) {
-      this.promoCodes.applied = null;
-      callback();
-    },
-    setCoupon: function(couponCode) {
-
-      var promos = this.promoCodes;
-
-      if (!promos.coupons[couponCode]) return void 0;
-
-      promos.applied = promos.coupons[couponCode];
-
-      return promos.applied;
-    },
-    getCouponValue: function() {
-
-        var subTotal      = this.getSubTotal(),
-            couponAmount  = this.promoCodes.applied,
-            couponValue   = 0;
-
-        // When there is not a valid coupon applied, return 0
-        if (!couponAmount) return couponValue;
-
-        couponValue = subTotal - calcPercentage(subTotal, couponAmount);
-
-        return couponValue;
-    },
-    isCoupon: function() {
-      return !!this.promoCodes.applied;
-    },
-    getShippingCost: function() {
-      return this.shippingCost;
-    },
-    getSubTotal: function() {
-      return this.check.subTotal;
-    },
-    getTotalSaving: function() {
-      return this.check.saving;
-    }
-  };
-
-    while(len--) {
-        addButtons[len].addEventListener('click', function(event) {
-            addProduct(this.firstChild.nextSibling);
-        })
-    }
 
     var addProduct = function(product) {
 
@@ -669,7 +670,7 @@
         toggleCart();
     }
 
-    var updateProduct = function(product) {
+    var changeProductQuantity = function(product) {
 
         var name      = product.name,
             quantity  = product.quantity || 1,
@@ -705,80 +706,7 @@
         }
     }
 
-    var updateCartRow = function(product) {
-
-      var input   = _doc.getElementById('input-' + product.name);
-      var partial = _doc.getElementById('partial-' + product.name);
-
-      input.value = product.quantity;
-      partial.innerHTML = getCurrency(calculatePrice(product));
-    }
-
-    var removeCartRow = function(row) {
-
-        var sep = row.previousSibling;
-        
-        cartTable.deleteRow(row.rowIndex); 
-        cartTable.deleteRow(sep.rowIndex); // Delete the separator row
-
-        toggleCart();
-    }
-
-    var updateCart = function() {
-
-      var prodList = CartDB.getProductsList();
-
-      if (!prodList || prodList.length === 0) return;
-
-      // remove all products
-      while (cartTable.firstChild) {
-        cartTable.removeChild(cartTable.firstChild);
-      }
-
-      prodList.map(function(name) {
-        addCartRow(CartDB.getProduct(name));
-      });
-
-      toggleCart();
-    }
-
-    // Utility functions
-
-    function toggleCart() {
-
-        var quantity = CartDB.getQuantity();
-
-        if (quantity === 0) {
-            toggle(cart, 'none');
-        } else if (quantity === 1) {
-            toggle(cart, 'block');
-        }
-
-      cartCheck();
-    }
-
-    var calculatePrice = function(product, discount) {
-
-      var unitPrice = product.unitPrice,
-          quantity  = product.quantity,
-          discount  = (discount === 0) ? 0 : CartDB.getDiscount(product);
-
-      var subTotal = unitPrice * quantity;
-
-      return calcPercentage(subTotal, discount);
-    }
-
-    var calculateDiscount = function(product, ignoreDiscount) {
-
-      var unitPrice = product.unitPrice,
-          discount;
-
-      discount = (!ignoreDiscount) ? CartDB.getDiscount(product) : 0;
-
-      return calcPercentage(unitPrice, discount);
-    }
-
-    function addCartRow(product) {
+    var addCartRow = function(product) {
 
       // When a coupon is applied to the total, sets the product's discount to 0
         var isCoupon     = CartDB.isCoupon();
@@ -928,8 +856,81 @@
 
             product.quantity = this.value;
 
-            updateProduct(product);         
+            changeProductQuantity(product);         
         });
+    }
+
+    var updateCartRow = function(product) {
+
+      var input   = _doc.getElementById('input-' + product.name);
+      var partial = _doc.getElementById('partial-' + product.name);
+
+      input.value = product.quantity;
+      partial.innerHTML = getCurrency(calculatePrice(product));
+    }
+
+    var removeCartRow = function(row) {
+
+        var sep = row.previousSibling;
+        
+        cartTable.deleteRow(row.rowIndex); 
+        cartTable.deleteRow(sep.rowIndex); // Delete the separator row
+
+        toggleCart();
+    }
+
+    var updateCart = function() {
+
+      var prodList = CartDB.getProductsList();
+
+      if (!prodList || prodList.length === 0) return;
+
+      // remove all products
+      while (cartTable.firstChild) {
+        cartTable.removeChild(cartTable.firstChild);
+      }
+
+      prodList.map(function(name) {
+        addCartRow(CartDB.getProduct(name));
+      });
+
+      toggleCart();
+    }
+
+    // Utility functions
+
+    function toggleCart() {
+
+        var quantity = CartDB.getQuantity();
+
+        if (quantity === 0) {
+            toggle(cart, 'none');
+        } else if (quantity === 1) {
+            toggle(cart, 'block');
+        }
+
+      cartCheck();
+    }
+
+    var calculatePrice = function(product, discount) {
+
+      var unitPrice = product.unitPrice,
+          quantity  = product.quantity,
+          discount  = (discount === 0) ? 0 : CartDB.getDiscount(product);
+
+      var subTotal = unitPrice * quantity;
+
+      return calcPercentage(subTotal, discount);
+    }
+
+    var calculateDiscount = function(product, ignoreDiscount) {
+
+      var unitPrice = product.unitPrice,
+          discount;
+
+      discount = (!ignoreDiscount) ? CartDB.getDiscount(product) : 0;
+
+      return calcPercentage(unitPrice, discount);
     }
 
     function cartCheck() {
@@ -1014,11 +1015,13 @@
         }
     }
 
+    /* Helper functions */
+
     var calcPercentage = function(value, percentage) {
       return (value - ((percentage / 100) * value)).toFixed(2);
     }
 
-    function copy(first, second) {
+    function copyObj(first, second) {
       for (var p in first) {
         if (first.hasOwnProperty(p)) {
             second[p] = first[p];
@@ -1058,6 +1061,15 @@
       return elem;
     }
 
+    function once(fn) {
+
+      var _once = false;
+
+      return function () {
+          return _once ? void 0 : ((_once = true), fn.apply(this, arguments))
+      }
+    }
+
     function initialize() {
 
         // Initialize promos for products of a specific type
@@ -1084,14 +1096,28 @@
             });
         });
 
+      // Add an Event listener for each 'ADD TO CART' button
+      while(len--) {
+          addButtons[len].addEventListener('click', function(event) {
+              addProduct(this.firstChild.nextSibling);
+          })
+      }
+
       // Set fixed shipping cost
       cartShipp.innerHTML = getCurrency(CartDB.getShippingCost());
 
       couponButton.addEventListener('click', verifyCoupon);
-
     }
 
-initialize();
+    // Public API
+    return {
+      initialize: once(initialize)
+    }
+
+})(window);
+
+// Initialize the shopping cart
+Cart.initialize();
 </script>
 
 
